rearanged printersettings component

--- a/WebUIBlazor/Pages/Print.razor
+++ b/WebUIBlazor/Pages/Print.razor
@@ -78,7 +78,7 @@
             </MudPaper>
         </MudItem>
 
-        @if (printer.SelectedPrinter.HasAutoBedLevel)
+        @if (printer.Printer.HasAutoBedLevel)
         {
             <MudItem xs="8">
                 <MudPaper Height="100%" Width="100%" Elevation="0">
