--- a/WebUIBlazor/Pages/PrinterSettings.razor
+++ b/WebUIBlazor/Pages/PrinterSettings.razor
@@ -287,7 +287,7 @@
 
         <MudTabPanel Text="Motion Settings">
             <MudGrid>
-                <MudItem xs="12" md="4" lg="2" Class="mx-0 px-0 mb-0 pb-0">
+                <MudItem xs="12" sm="6" md="4" lg="4" xl="2" Class="mx-0 px-0 mb-0 pb-0">
                     <MudPaper MinHeight="550px" Class="pa-4 px-8" Outlined="true">
                         <div style="min-height:140px">
                             <MudCardHeader Class="pt-1" Style="display: flex; justify-content: center;">
@@ -320,7 +320,7 @@
                         </ExpansionPanel>
                     </MudPaper>
                 </MudItem>
-                <MudItem xs="12" md="4" lg="2" Class="mx-0 px-0 mb-0 pb-0">
+                <MudItem xs="12" sm="6" md="4" lg="4" xl="2" Class="mx-0 px-0 mb-0 pb-0">
                     <MudPaper MinHeight="550px" Class="pa-4 px-8" Outlined="true">
                         <div style="min-height:140px">
                             <MudCardHeader Class="pt-1" Style="display: flex; justify-content: center;">
@@ -353,7 +353,7 @@
                         </ExpansionPanel>
                     </MudPaper>
                 </MudItem>
-                <MudItem xs="12" md="4" lg="2" Class="mx-0 px-0 mb-0 pb-0">
+                <MudItem xs="12" sm="6" md="4" lg="4" xl="2" Class="mx-0 px-0 mb-0 pb-0">
                     <MudPaper MinHeight="550px" Class="pa-4 px-8" Outlined="true">
                         <div style="min-height:140px">
                             <MudCardHeader Class="pt-1" Style="display: flex; justify-content: center;">
@@ -381,7 +381,7 @@
                         </ExpansionPanel>
                     </MudPaper>
                 </MudItem>
-                <MudItem xs="12" md="4" lg="2" Class="mx-0 px-0 mb-0 pb-0">
+                <MudItem xs="12" sm="6" md="4" lg="4" xl="2" Class="mx-0 px-0 mb-0 pb-0">
                     <MudPaper MinHeight="550px" Class="pa-4 px-8" Outlined="true">
                         <div style="min-height:140px">
                             <MudCardHeader Class="pt-1" Style="display: flex; justify-content: center;">
@@ -414,7 +414,7 @@
                         </ExpansionPanel>
                     </MudPaper>
                 </MudItem>
-                <MudItem xs="12" md="4" lg="2" Class="mx-0 px-0 mb-0 pb-0">
+                <MudItem xs="12" sm="6" md="4" lg="4" xl="2" Class="mx-0 px-0 mb-0 pb-0">
                     <MudPaper MinHeight="550px" Class="pa-4 px-8" Outlined="true">
                         <div style="min-height:140px">
                             <MudCardHeader Class="pt-1" Style="display: flex; justify-content: center;">
@@ -447,7 +447,7 @@
                         </ExpansionPanel>
                     </MudPaper>
                 </MudItem>
-                <MudItem xs="12" md="4" lg="2" Class="mx-0 px-0 mb-0 pb-0">
+                <MudItem xs="12" sm="6" md="4" lg="4" xl="2" Class="mx-0 px-0 mb-0 pb-0">
                     <MudPaper MinHeight="550px" Class="pa-4 px-8" Outlined="true">
                         <div style="min-height:140px">
                             <MudCardHeader Class="pt-1" Style="display: flex; justify-content: center;">
